--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,74 @@
----
----
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{clavijo_development_2019,
+	title = {Development and {Application} of a {Data}-{Driven} {System} for {Sensor} {Fault} {Diagnosis} in an {Oil} {Processing} {Plant}},
+	volume = {7},
+	url = {https://www.mdpi.com/2227-9717/7/7/436},
+	doi = {10.3390/pr7070436},
+	abstract = {Predictive analytics is usually cited as one of the most important pillars of the digital transformation. For the oil industry, speciﬁcally, it is a common belief that issues like integrity and maintenance could beneﬁt from predictive analytics. This paper presents the development and the application of a process-monitoring tool in a real process facility. The PMA (Predictive Maintenance Application) system is a data-driven application that uses a multivariate analysis in order to predict the system behavior. Results show that the use of a multivariate approach for process monitoring could not only detect an early failure at a metering system days before the operation crew, but could also successfully identify, among hundreds of variables, the root cause of the abnormal situation. By applying such an approach, a better performance of the monitored equipment is expected, decreasing its downtime.},
+	language = {en},
+	number = {436},
+	journal = {Processes},
+	author = {Clavijo, Nayher and Melo, Afrânio and Câmara, Maurício M and Feital, Thiago and Anzai, Thiago K and Diehl, Fábio C and Thompson, Pedro H and Pinto, José C},
+	month = jul,
+	year = {2019},
+	note = {00000},
+	file = {Clavijo et al. - 2019 - Development and Application of a Data-Driven Syste.pdf:/Users/afranio/Zotero/storage/L95HA4GW/Clavijo et al. - 2019 - Development and Application of a Data-Driven Syste.pdf:application/pdf},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{lemos_echo_2021,
+	title = {Echo {State} network based soft sensor for {Monitoring} and {Fault} {Detection} of {Industrial} {Processes}},
+	volume = {155},
+	issn = {0098-1354},
+	url = {https://www.sciencedirect.com/science/article/pii/S0098135421002908},
+	doi = {10.1016/j.compchemeng.2021.107512},
+	abstract = {In this paper a semi-automatic computationally inexpensive system is developed and implemented for monitoring and fault detection of industrial processes. The system uses a soft sensor based on Echo State Networks (ESN) and is able to capture the non-linear dynamic relationships in the process data, making it convenient for real-time monitoring applications. The soft sensor is set to simulate normal operating conditions, so that when the process is governed by other causes, possibly in failure, high residues occur and allow the failure identification. In addition, the system monitors the reliability of the model predictions by tracking the internal states of the ESN dynamic reservoir, indicating whether the model predictions can be used instead of the measured data. The system is successfully applied to the Mackey-Glass Anomaly Benchmark (MGAB) and to the monitoring of critical pieces of equipment of a real oil and gas plant.},
+	language = {en},
+	urldate = {2021-10-12},
+	journal = {Computers \& Chemical Engineering},
+	author = {Lemos, Tiago and Campos, Luiz Felipe and Melo, Afrânio and Clavijo, Nayher and Soares, Rafael and Câmara, Maurício and Feital, Thiago and Anzai, Thiago and Pinto, José Carlos},
+	month = dec,
+	year = {2021},
+	keywords = {fault detection, soft sensor, echo state network, monitoring, oil and gas processing},
+	pages = {107512},
+	file = {Lemos et al. - 2021 - Echo State network based soft sensor for Monitorin.pdf:/Users/afranio/Zotero/storage/L6I8RCPC/Lemos et al. - 2021 - Echo State network based soft sensor for Monitorin.pdf:application/pdf;ScienceDirect Snapshot:/Users/afranio/Zotero/storage/NFG58RQ5/S0098135421002908.html:text/html},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@article{clavijo_variable_2021,
+	title = {Variable {Selection} for {Fault} {Detection} {Based} on {Causal} {Discovery} {Methods}: {Analysis} of an {Actual} {Industrial} {Case}},
+	volume = {9},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	shorttitle = {Variable {Selection} for {Fault} {Detection} {Based} on {Causal} {Discovery} {Methods}},
+	url = {https://www.mdpi.com/2227-9717/9/3/544},
+	doi = {10.3390/pr9030544},
+	abstract = {Variable selection constitutes an essential step to reduce dimensionality and improve performance of fault detection and diagnosis in large scale industrial processes. For this reason, in this paper, variable selection approaches based on causality are proposed and compared, in terms of model adjustment of available data and fault detection performance, with several other filter-based, wrapper-based, and embedded-based variable selection methods. These approaches are applied in a simulated benchmark case and an actual oil and gas industrial case considering four different learning models. The experimental results show that obtained models presented better performance during the fault detection stage when variable selection procedures based on causality were used for purpose of model building.},
+	language = {en},
+	number = {3},
+	urldate = {2021-11-23},
+	journal = {Processes},
+	author = {Clavijo, Nayher and Melo, Afrânio and Soares, Rafael M. and Campos, Luiz Felipe de O. and Lemos, Tiago and Câmara, Maurício M. and Anzai, Thiago K. and Diehl, Fabio C. and Thompson, Pedro H. and Pinto, José Carlos},
+	month = mar,
+	year = {2021},
+	note = {Number: 3
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {feature selection, variable selection, fault detection and diagnosis, causality, conditional mutual information, real oil and gas process facility},
+	pages = {544},
+	file = {Full Text PDF:/Users/afranio/Zotero/storage/Y8AYGJMW/Clavijo et al. - 2021 - Variable Selection for Fault Detection Based on Ca.pdf:application/pdf;Snapshot:/Users/afranio/Zotero/storage/THRZWNEC/544.html:text/html},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{fontoura_modeling_2022,
+	title = {Modeling of spiral wound membranes for gas separations. {Part} {III}: {A} nonisothermal {2D} permeation model},
+	volume = {177},
+	issn = {0263-8762},
+	shorttitle = {Modeling of spiral wound membranes for gas separations. {Part} {III}},
+	url = {https://www.sciencedirect.com/science/article/pii/S0263876221004469},
+	doi = {10.1016/j.cherd.2021.10.036},
+	abstract = {In the present study, a previously proposed mathematical model is improved with inclusion of the energy balance, considering the Joule–Thomson effect and the heat exchange between the retentate and permeate streams, in order to explain the temperature effects observed in actual industrial sites, which requires attention to potential problems and failures, such as gas condensation that damages the dense polymeric membrane, reducing separation efficiency. The proposed model was validated with real industrial data and was able to represent the phenomena at different operation conditions, as characterized through extensive sensitivity analyses. In order to do this, a methodology for data acquisition, pre-treatment, characterization, and data reconciliation was employed. Also, an algorithm based on Oriented-Object Programming (OOP) was proposed and implemented to simulate the real membrane separation offshore unit, considering the different configuration levels of the membrane separation setup for the first time: trains, banks, tubes, elements, and leaves. It is shown that the proposed model constitutes a promising tool for design of membrane separation equipment at industrial scale, thanks to its flexibility, model robustness, and the efficiency of the numerical method, which allows the full mapping of dew points on the membrane leaf, which can be used to prevent undesired swelling and ageing of the membrane material.},
+	language = {en},
+	urldate = {2022-04-25},
+	journal = {Chemical Engineering Research and Design},
+	author = {Fontoura, Tahyná B. and de Sá, Marília Caroline C. and de Menezes, Diego Q. Faria and Oechsler, Bruno Francisco and Melo, Afrânio and de O. Campos, Luiz Felipe and Anzai, Thiago K. and Diehl, Fábio C. and Thompson, Pedro H. and Pinto, José Carlos},
+	month = jan,
+	year = {2022},
+	keywords = {Energy balance, Gas separation, Membrane permeation, Modeling, Spiral-wound},
+	pages = {376--393},
 }
