--- a/_projects/eqe476.md
+++ b/_projects/eqe476.md
@@ -11,9 +11,9 @@ Essa disciplina tem como objetivo fornecer aos alunos fundamentos de transferên
 
 ## textos e slides
 
-* [Absorção de água por sementes (notebook Jupyter)](https://nbviewer.org/github/afraeq/jupyter-eq/blob/master/difusao_sementes.ipynb)
+* [Absorção de água por sementes](https://nbviewer.org/github/afraeq/jupyter-eq/blob/master/difusao_sementes.ipynb) - Será que seus conhecimentos de transferência de massa podem te ajudar a conquistar um novo amor? Descubra neste notebook Jupyter, que explora em detalhes a implementação de um modelo difusivo para a absorção de água por sementes.
 
-* [Coeficientes de difusão (slides)](https://drive.google.com/file/d/1acTtWUWx1Ng5HSAabL6d2oVN7QfxOBq9/view?usp=sharing)
+* [Coeficientes de difusão](https://drive.google.com/file/d/1acTtWUWx1Ng5HSAabL6d2oVN7QfxOBq9/view?usp=sharing) - Aula sobre estimativas empíricas para os coeficientes de difusão.
 
 ## provas
 
