Ajustes na bibliografia.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,9 @@
 
 @article{clavijo_development_2019,
+	abbr = {Processes},
 	title = {Development and {Application} of a {Data}-{Driven} {System} for {Sensor} {Fault} {Diagnosis} in an {Oil} {Processing} {Plant}},
 	volume = {7},
-	url = {https://www.mdpi.com/2227-9717/7/7/436},
+	html = {https://www.mdpi.com/2227-9717/7/7/436},
 	doi = {10.3390/pr7070436},
 	number = {436},
 	journal = {Processes},
@@ -12,10 +13,11 @@
 }
 
 @article{lemos_echo_2021,
+	abbr = {CACE},
 	title = {Echo {State} network based soft sensor for {Monitoring} and {Fault} {Detection} of {Industrial} {Processes}},
 	volume = {155},
 	issn = {0098-1354},
-	url = {https://www.sciencedirect.com/science/article/pii/S0098135421002908},
+	html = {https://www.sciencedirect.com/science/article/pii/S0098135421002908},
 	doi = {10.1016/j.compchemeng.2021.107512},
 	journal = {Computers \& Chemical Engineering},
 	author = {Lemos, Tiago and Campos, Luiz Felipe and Melo, Afrânio and Clavijo, Nayher and Soares, Rafael and Câmara, Maurício and Feital, Thiago and Anzai, Thiago and Pinto, José Carlos},
@@ -26,9 +28,10 @@
 }
 
 @article{clavijo_variable_2021,
+		abbr = {Processes},
 	title = {Variable {Selection} for {Fault} {Detection} {Based} on {Causal} {Discovery} {Methods}: {Analysis} of an {Actual} {Industrial} {Case}},
 	volume = {9},
-	url = {https://www.mdpi.com/2227-9717/9/3/544},
+	html = {https://www.mdpi.com/2227-9717/9/3/544},
 	doi = {10.3390/pr9030544},
 	language = {en},
 	number = {3},
@@ -40,10 +43,11 @@
 }
 
 @article{fontoura_modeling_2022,
+		abbr = {ChERD},
 	title = {Modeling of spiral wound membranes for gas separations. {Part} {III}: {A} nonisothermal {2D} permeation model},
 	volume = {177},
 	issn = {0263-8762},
-	url = {https://www.sciencedirect.com/science/article/pii/S0263876221004469},
+	html = {https://www.sciencedirect.com/science/article/pii/S0263876221004469},
 	doi = {10.1016/j.cherd.2021.10.036},
 	urldate = {2022-04-25},
 	journal = {Chemical Engineering Research and Design},
