--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,8 @@
 	abbr = {Processes},
 	title = {Development and {Application} of a {Data}-{Driven} {System} for {Sensor} {Fault} {Diagnosis} in an {Oil} {Processing} {Plant}},
 	volume = {7},
-	html = {https://www.mdpi.com/2227-9717/7/7/436},
+	html = {https://www.mdpi.com/2227-9717/7/7/436/htm},
+	pdf = {https://www.mdpi.com/2227-9717/7/7/436/pdf?version=1562750627},
 	doi = {10.3390/pr7070436},
 	number = {436},
 	journal = {Processes},
@@ -31,7 +32,8 @@
 		abbr = {Processes},
 	title = {Variable {Selection} for {Fault} {Detection} {Based} on {Causal} {Discovery} {Methods}: {Analysis} of an {Actual} {Industrial} {Case}},
 	volume = {9},
-	html = {https://www.mdpi.com/2227-9717/9/3/544},
+	html = {https://www.mdpi.com/2227-9717/9/3/544/htm},
+	pdf = {https://www.mdpi.com/2227-9717/9/3/544/pdf?version=1616407859},
 	doi = {10.3390/pr9030544},
 	language = {en},
 	number = {3},
