--- a/_projects/eqe473.md
+++ b/_projects/eqe473.md
@@ -12,7 +12,7 @@ Esta disciplina tem como objetivo apresentar os princípios fundamentais envolvi
 ## textos e slides
 
 * [Aula 1](https://drive.google.com/file/d/12N1iVYziolrZir-jUAqHr9ZOVUtVQwBX/view?usp=sharing) - Nesta primeira aula viajamos um pouquinho pela história da engenharia química, com o objetivo de entender a importância do surgimento do conceito de operações unitárias para o estabelecimento da identidade da nossa profissão.
-* [Filtração industrial](https://drive.google.com/file/d/139NmPGBkQg9maDnLkD-CvKJv9zqOVEUH/view?usp=sharing) -  Aula sobre filtros granulares, prensa, de tambor rotativo, meios filtrantes e auxiliares de filtração.
+* [Filtros industriais](https://drive.google.com/file/d/139NmPGBkQg9maDnLkD-CvKJv9zqOVEUH/view?usp=sharing) -  Aula sobre filtros granulares, prensa, de tambor rotativo, meios filtrantes e auxiliares de filtração.
 * [Modelagem e Simulação de uma Operação de Filtração em Batelada](https://www.kaggle.com/code/afrniomelo/modelagem-e-simula-o-de-uma-opera-o-de-filtra-o) - Usando como pano de fundo a comovente história de uma engenheira e seu estagiário trabalhando na implementação de um processo de extração de óleo de grãos de amendoim na Índia, este notebook Jupyter vai te guiar passo-a-passo na modelagem e simulação de um filtro-prensa industrial.
 
 ## provas
@@ -49,8 +49,8 @@ Esta disciplina tem como objetivo apresentar os princípios fundamentais envolvi
 
 ## livro-texto
 
-* [Peçanha, R. P. - Sistemas Particulados # Operações Unitárias Envolvendo Partículas e Fluidos. Elsevier, 2014](https://www.amazon.com.br/Sistemas-Particulados-Ricardo-Pires-Pe%C3%A7anha/dp/8535277218).
+* [Peçanha, R. P. - Sistemas Particulados # Operações Unitárias Envolvendo Partículas e Fluidos. Elsevier, 2014](https://www.amazon.com.br/Sistemas-Particulados-Ricardo-Pires-Pe%C3%A7anha/dp/8535277218)
 
 ## apresentação
 
-* [Conteúdo, forma de avaliação e referências](https://drive.google.com/file/d/16R7lVFhEl8zSoY9n5lcHf5HeEmVHPDmN/view?usp=sharing).
+* [Conteúdo, forma de avaliação e referências](https://drive.google.com/file/d/16R7lVFhEl8zSoY9n5lcHf5HeEmVHPDmN/view?usp=sharing)
