--- a/_projects/eqe476.md
+++ b/_projects/eqe476.md
@@ -13,7 +13,7 @@ Essa disciplina tem como objetivo fornecer aos alunos fundamentos de transferên
 
 * [Absorção de água por sementes](https://nbviewer.org/github/afraeq/jupyter-eq/blob/master/difusao_sementes.ipynb) - Será que seus conhecimentos de transferência de massa podem te ajudar a conquistar um novo amor? Descubra neste notebook Jupyter, que explora em detalhes a implementação de um modelo difusivo para a absorção de água por sementes.
 
-* [Coeficientes de difusão](https://drive.google.com/file/d/1acTtWUWx1Ng5HSAabL6d2oVN7QfxOBq9/view?usp=sharing) - Aula sobre estimativas empíricas para os coeficientes de difusão.
+* [Coeficientes de difusão](https://drive.google.com/file/d/1acTtWUWx1Ng5HSAabL6d2oVN7QfxOBq9/view?usp=sharing) - Aula sobre a constante de proporcionalidade entre o fluxo material e o gradiente de concentração -- o coeficiente de difusão binária da lei de Fick.
 
 ## provas
 
@@ -80,4 +80,4 @@ A princípio, a matéria das provas está toda contida nas aulas e nas listas de
 
 ##  apresentação
 
-* [Conteúdo, forma de avaliação e referências](https://drive.google.com/file/d/1xfJmra0U3WO7Vj8z3NRGy93PgWonDOkf/view?usp=sharing).
+* [Conteúdo, forma de avaliação e referências](https://drive.google.com/file/d/1xfJmra0U3WO7Vj8z3NRGy93PgWonDOkf/view?usp=sharing)
