--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,6 @@
 	month = dec,
 	year = {2021},
 	keywords = {fault detection, soft sensor, echo state network, monitoring, oil and gas processing},
-	pages = {107512},
 }
 
 @article{clavijo_variable_2021,
@@ -41,7 +40,6 @@
 	author = {Clavijo, Nayher and Melo, Afrânio and Soares, Rafael M. and Campos, Luiz Felipe de O. and Lemos, Tiago and Câmara, Maurício M. and Anzai, Thiago K. and Diehl, Fabio C. and Thompson, Pedro H. and Pinto, José Carlos},
 	month = mar,
 	year = {2021},
-	pages = {544},
 }
 
 @article{fontoura_modeling_2022,
@@ -57,4 +55,18 @@
 	month = jan,
 	year = {2022},
 	pages = {376--393},
+}
+
+@article{melo_open_2022,
+		abbr = {CACE},
+	title = {Open benchmarks for assessment of process monitoring and fault diagnosis techniques: a review and critical analysis},
+	issn = {0098-1354},
+	html = {https://www.sciencedirect.com/science/article/abs/pii/S0098135422003003},
+	doi = {10.1016/j.compchemeng.2022.107964},
+	language = {en},
+	urldate = {2022-08-19},
+	journal = {Computers \& Chemical Engineering},
+	author = {Melo, Afrânio and Câmara, Maurício M. and Clavijo, Nayher and Pinto, José Carlos},
+	month = aug,
+	year = {2022},
 }
