--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 @article{melo_open_2022,
 	abbr = {CACE},
-	title = {Open benchmarks for assessment of process monitoring and fault diagnosis techniques: a review and critical analysis},
+	title = {Open benchmarks for assessment of process monitoring and fault diagnosis techniques: A review and critical analysis},
 	issn = {0098-1354},
 	html = {https://www.sciencedirect.com/science/article/abs/pii/S0098135422003003},
 	doi = {10.1016/j.compchemeng.2022.107964},
