--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,12 +2,12 @@
 	abbr = {CACE},
 	title = {Open benchmarks for assessment of process monitoring and fault diagnosis techniques: A review and critical analysis},
 	issn = {0098-1354},
-	html = {https://www.sciencedirect.com/science/article/abs/pii/S0098135422003003},
+	html = {https://authors.elsevier.com/a/1feGKMK3kz%7ESx},
 	doi = {10.1016/j.compchemeng.2022.107964},
 	language = {en},
 	journal = {Computers \& Chemical Engineering},
 	author = {Melo, Afrânio and Câmara, Maurício M. and Clavijo, Nayher and Pinto, José Carlos},
-	month = aug,
+	month = sep,
 	year = {2022},
 }
 
