--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 	abbr = {CACE},
 	title = {Open benchmarks for assessment of process monitoring and fault diagnosis techniques: A review and critical analysis},
 	issn = {0098-1354},
-	html = {https://authors.elsevier.com/a/1feGKMK3kz%7ESx},
+	html = {https://www.sciencedirect.com/science/article/pii/S0098135422003003},
 	doi = {10.1016/j.compchemeng.2022.107964},
 	language = {en},
 	journal = {Computers \& Chemical Engineering},
