--- a/_projects/eqe476.md
+++ b/_projects/eqe476.md
@@ -72,7 +72,8 @@ A princípio, a matéria das provas está toda contida nas aulas e nas listas de
 
 * [Formulário - P1](https://drive.google.com/file/d/1cPkZ3MfXO6jxxGknBG7SPFeqI4DNpClD/view?usp=sharing)
 * [Formulário - P2](https://drive.google.com/file/d/173vSfSu9vmfN0JixMoxioB46J8_3F78H/view?usp=sharing)
-* [Correlações, modelos e analogias para o cálculo da convecção](https://drive.google.com/file/d/1b9o31WVqFXY-1P699XRFfI4LATqIF8zU/view?usp=sharing)
+* [Equações termodinâmicas](https://drive.google.com/file/d/1MyzShRn_guDsiF7-n_yncHeeMRhgF-XR/view?usp=share_link)
+* [Correlações, modelos e analogias para a convecção](https://drive.google.com/file/d/1b9o31WVqFXY-1P699XRFfI4LATqIF8zU/view?usp=sharing)
 * [Carta psicrométrica](https://drive.google.com/file/d/15V-P0bT4nAUZwYz0t0H7UlACfZf1XMFJ/view?usp=sharing)
 * [Diagrama de Moody](https://drive.google.com/file/d/13a1qw3P9fyy30s1R-nEbCpgMKZw854Sv/view?usp=sharing)
 * [Divergente, laplaciano e gradiente](https://drive.google.com/file/d/1-F2WRZ4inJNtv2DK55x5-BUGfmwqOVki/view?usp=sharing)
