--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,7 @@
 
 @article{lemos_echo_2021,
 	abbr = {CACE},
-	title = {Echo {State} network based soft sensor for {Monitoring} and {Fault} {Detection} of {Industrial} {Processes}},
+	title = {Echo State Network Based Soft Sensor for Monitoring and Fault Detection of Industrial Processes},
 	volume = {155},
 	issn = {0098-1354},
 	html = {https://www.sciencedirect.com/science/article/pii/S0098135421002908},
