--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
 	language = {en},
 	journal = {Industrial \& Engineering Chemistry Research},
 	author = {Melo, Afrânio and Fadel, Fernando F. and Câmara, Maurício M. and Pinto, José Carlos},
-	month = ago,
+	month = aug,
 	year = {2023},
 }
 
