--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,15 @@
+@article{melo_distance_2023,
+	abbr = {I&EC},
+	title = {Distance Matrix Patterns for Visual and Interpretable Process Data Analytics},
+	html = {https://pubs.acs.org/doi/10.1021/acs.iecr.3c01481},
+	doi = {10.1021/acs.iecr.3c01481},
+	language = {en},
+	journal = {Industrial \& Engineering Chemistry Research},
+	author = {Melo, Afrânio and Fadel, Fernando F. and Câmara, Maurício M. and Pinto, José Carlos},
+	month = aug,
+	year = {2023},
+}
+
 @article{melo_open_2022,
 	abbr = {CACE},
 	title = {Open benchmarks for assessment of process monitoring and fault diagnosis techniques: A review and critical analysis},
