--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,15 @@
+@article{melo_liquid-liquid_2023,
+	abbr = {MRE},
+	title = {Liquid-Liquid Equilibrium in Xylene Solubles (XS) Analysis of Polypropylene},
+	html = {https://onlinelibrary.wiley.com/doi/abs/10.1002/mren.202300029},
+	doi = {10.1002/mren.202300029},
+	language = {en},
+	journal = {Macromolecular Reaction Engineering},
+	author = {Melo, Afrânio and Pessoa, Fernando L. P. and Pinto, José Carlos},
+	month = oct,
+	year = {2023},
+}
+
 @article{melo_distance_2023,
 	abbr = {I&EC},
 	title = {Distance Matrix Patterns for Visual and Interpretable Process Data Analytics},
