Iniciando tradução para o inglês.

--- a/_projects/eqe476.md
+++ b/_projects/eqe476.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: eqe476 - transferência de massa
+title: projects.titles.eqe476
 description: Disciplina oferecida aos cursos de Engenharia Química e Engenharia de Alimentos na Escola de Química/UFRJ. 
 img: assets/img/diffusion.jpg
 importance: 6
