--- a/_projects/eqe473.md
+++ b/_projects/eqe473.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: eqe473 - operações unitárias I
+title: projects.titles.eqe473
 description: Disciplina oferecida ao curso de Engenharia Química na Escola de Química/UFRJ. 
 img: assets/img/industry.jpg
 importance: 5
