--- a/_projects/eqe473.md
+++ b/_projects/eqe473.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: projects.titles.eqe473
-description: Disciplina oferecida ao curso de Engenharia Química na Escola de Química/UFRJ. 
+description: projects.descriptions.eqe473
 img: assets/img/industry.jpg
 importance: 5
 category: disciplinas
