--- a/_projects/eqe476.md
+++ b/_projects/eqe476.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: projects.titles.eqe476
-description: Disciplina oferecida aos cursos de Engenharia Química e Engenharia de Alimentos na Escola de Química/UFRJ. 
+description: projects.descriptions.eqe476
 img: assets/img/diffusion.jpg
 importance: 6
 category: disciplinas
