bug bug bug bug bug

--- a/_projects/eqe473.md
+++ b/_projects/eqe473.md
@@ -4,7 +4,7 @@ title: projects.titles.eqe473
 description: projects.descriptions.eqe473
 img: assets/img/industry.jpg
 importance: 5
-category: projects.categories.eqe473
+category: disciplinas
 ---
 
 Esta disciplina tem como objetivo apresentar os princípios fundamentais envolvidos nas operações unitárias relacionadas a sistemas particulados, de modo a permitir tanto o projeto quanto a análise de desempenho dos equipamentos que lidam com tais sistemas. 
