--- a/_projects/eqe476.md
+++ b/_projects/eqe476.md
@@ -4,7 +4,7 @@ title: projects.titles.eqe476
 description: projects.descriptions.eqe476
 img: assets/img/diffusion.jpg
 importance: 6
-category: projects.categories.eqe476
+category: disciplinas
 ---
 
 Essa disciplina tem como objetivo fornecer aos alunos fundamentos de transferência de massa que permitam a análise de processos e o projeto de equipamentos onde esse fenômeno de transporte seja importante.
