--- a/_projects/eqe476.md
+++ b/_projects/eqe476.md
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: page2
 title: projects.titles.eqe476
 description: projects.descriptions.eqe476
 img: assets/img/diffusion.jpg
@@ -7,78 +7,4 @@ importance: 6
 category: disciplinas
 ---
 
-Essa disciplina tem como objetivo fornecer aos alunos fundamentos de transferência de massa que permitam a análise de processos e o projeto de equipamentos onde esse fenômeno de transporte seja importante.
-
-## textos e slides
-
-* [Absorção de água por sementes](https://nbviewer.org/github/afraeq/jupyter-eq/blob/master/difusao_sementes.ipynb) - Será que seus conhecimentos de transferência de massa podem te ajudar a conquistar um novo amor? Descubra neste notebook Jupyter, que explora em detalhes a implementação de um modelo difusivo para a absorção de água por sementes.
-
-* [Coeficientes de difusão](https://drive.google.com/file/d/1acTtWUWx1Ng5HSAabL6d2oVN7QfxOBq9/view?usp=sharing) - Aula sobre a constante de proporcionalidade entre o fluxo material e o gradiente de concentração -- o coeficiente de difusão binária da lei de Fick.
-
-## provas
-
-* [P1](https://drive.google.com/file/d/1LkxyNmRTZ-kCgiAKeciVP79_kNzUB31x/view?usp=sharing)
-* [P2](https://drive.google.com/file/d/1CE1gT-UOEbzWhChVfrtyRgnxEykNFgWw/view?usp=sharing)
-* [PF](https://drive.google.com/file/d/1nwlGvT2oxXA_72PxdmgQNkNKhhHo1aBw/view?usp=sharing)
-
-## listas de exercícios
-
-* Manuais
-	* [1](https://drive.google.com/file/d/1kHR_SOtEvyWw-Qt0L3DO_HBBR0QS6jF6/view?usp=sharing)
-	* [2](https://drive.google.com/file/d/1vnOZdi4TcsjTQpE_SzsesqZFd9YTRQq9/view?usp=sharing)
-	* [3](https://drive.google.com/file/d/1EY3GIBDgk_xhbAH_pgNfQGaVCRjIWsLD/view?usp=sharing)
-	* [4](https://drive.google.com/file/d/1da1-ZHjPSQO8syqeW_DbrS6EUQgB1n_y/view?usp=sharing)
-	* [5](https://drive.google.com/file/d/1QZCFCjAufOTd4BBZSfKJ1312YT2t93cT/view?usp=sharing)
-* Computacionais
-	* [1](https://drive.google.com/file/d/1yaMc46GapIBtUvXsUgY0TovOdhjn7kQ_/view?usp=sharing)
-	* [2](https://drive.google.com/file/d/1kXklxN5avbNUFRnkaCTgDnDPEdN6UhAr/view?usp=sharing)
-	* [3](https://drive.google.com/file/d/1EfB_Wu3GunD8jy-djEH5OOLpwpsh_WLu/view?usp=sharing)
-	* [4](https://drive.google.com/file/d/1DtIDmDIHrSVEG8bs3iC_k4XuZCq1ZLYl/view?usp=sharing)
-
-## leitura recomendada
-
-A princípio, a matéria das provas está toda contida nas aulas e nas listas de exercícios. Porém, caso vc deseje uma leitura de apoio, recomendo:
-
-* P1
-	* Diffusion - Mass Transfer in Fluid Systems - Cussler, 3ª ed 
-		* Cap 2 (2.2, 2.3, 2.4.1, 2.4.2, 2.6)
-		* Cap 3 (3.1, 3.2, 3.3, 3.4, 3.6)
-		* Cap 5 (5.1, 5.2, 5.3, 5.7)
-		* Cap 6 (6.1, 6.2.1, 6.4 - com exceção de 6.1.4, 6.4.2, 6.4.4 e 6.4.5)
-		* Cap 7 (7.1, 7.3.2, 7.6) 
-		* Cap 17 (17.1.1)
-	* Fundamentals of Momentum, Heat and Mass Transfer -  Welty, Wicks, Wilson, Rorrer, 5ª ed
-		* Cap 24
-		* Cap 25
-		* Cap 26 (26.1, 26.2)
-		* Cap 27 (27.1, 27.2)
-	* Mass Transfer - Fundamentals and Applications - Hines e Maddox 
-		* Cap 1 (1.1, 1.2)
-		* Cap 2 (2.1, 2.2, 2.3, 2.5)
-		* Cap 3
-* P2
-	* Diffusion - Mass Transfer in Fluid Systems - Cussler, 3ª ed 
-		* Cap 1
-		* Cap 8
-		* Cap 9 (exceto 9.4 e 9.5)
-		* Cap 21 (21.1, 21.2, 21.3)
-	* Fundamentals of Momentum, Heat and Mass Transfer -  Welty, Wicks, Wilson, Rorrer, 5ª ed
-		* Cap 28 (exceto 28.5)
-		* Cap 29
-		* Cap 30
-
-
-## formulários e gráficos
-
-* [Formulário - P1](https://drive.google.com/file/d/1cPkZ3MfXO6jxxGknBG7SPFeqI4DNpClD/view?usp=sharing)
-* [Formulário - P2](https://drive.google.com/file/d/173vSfSu9vmfN0JixMoxioB46J8_3F78H/view?usp=sharing)
-* [Equações termodinâmicas](https://drive.google.com/file/d/1MyzShRn_guDsiF7-n_yncHeeMRhgF-XR/view?usp=share_link)
-* [Correlações, modelos e analogias para a convecção](https://drive.google.com/file/d/1b9o31WVqFXY-1P699XRFfI4LATqIF8zU/view?usp=sharing)
-* [Carta psicrométrica](https://drive.google.com/file/d/15V-P0bT4nAUZwYz0t0H7UlACfZf1XMFJ/view?usp=sharing)
-* [Diagrama de Moody](https://drive.google.com/file/d/13a1qw3P9fyy30s1R-nEbCpgMKZw854Sv/view?usp=sharing)
-* [Divergente, laplaciano e gradiente](https://drive.google.com/file/d/1-F2WRZ4inJNtv2DK55x5-BUGfmwqOVki/view?usp=sharing)
-* [Notação do curso](https://drive.google.com/file/d/1-5c5AKv9ZIumJyLZs4x0CqMpnWsZKG9J/view?usp=sharing)
-
-##  apresentação
-
-* [Conteúdo, forma de avaliação e referências](https://drive.google.com/file/d/1xfJmra0U3WO7Vj8z3NRGy93PgWonDOkf/view?usp=sharing)
+{% translate_file projects/eqe476.md %}
