--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,18 @@
+@article{melo_data-driven_2024,
+	abbr = {Processes},
+	title = {Data-Driven Process Monitoring and Fault Diagnosis: A Comprehensive Survey}
+	volume = {12},
+	html = {https://www.mdpi.com/2227-9717/12/2/251/htm},
+	pdf = {https://www.mdpi.com/2227-9717/12/2/251/pdf?version=1706088476},
+	doi = {10.3390/pr12020251},
+	language = {en},
+	number = {251},
+	journal = {Processes},
+	author = {Melo, Afrânio and Câmara, Maurício M. and Pinto, José Carlos},
+	month = mar,
+	year = {2024},
+}
+
 @article{melo_liquid-liquid_2023,
 	abbr = {MRE},
 	title = {Liquid-Liquid Equilibrium in Xylene Solubles (XS) Analysis of Polypropylene},
