--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 @article{melo_data-driven_2024,
 	abbr = {Processes},
-	title = {Data-Driven Process Monitoring and Fault Diagnosis: A Comprehensive Survey}
+	title = {Data-Driven Process Monitoring and Fault Diagnosis: A Comprehensive Survey},
 	volume = {12},
 	html = {https://www.mdpi.com/2227-9717/12/2/251/htm},
 	pdf = {https://www.mdpi.com/2227-9717/12/2/251/pdf?version=1706088476},
