--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,13 @@
 @article{spina_comparison_2024,
-	abbr = {SSRN},
+	abbr = {DCE},
 	title = {Comparison of Autoencoder Architectures for Fault Detection in Industrial Processes},
-	volume = {12},
-	html = {https://ssrn.com/abstract=4758647},
-	pdf = {https://deliverypdf.ssrn.com/delivery.php?ID=663088101094068109123098091098118006051074041037048078090051123006100024097084081049000016125081021108010047065009076018064009109014123097069011122073087105002028075083093085073111121124041123110097081082030123007015021026107080113088121067025115004123071125085105067122080068067026112&EXT=pdf&INDEX=TRUE},
-	doi = {10.2139/ssrn.4758647},
+	html = {https://www.sciencedirect.com/science/article/pii/S2772508124000243},
+	pdf = {https://www.sciencedirect.com/science/article/pii/S2772508124000243/pdfft?md5=c55239f87adb594358ee7dd0b16c8e9d&pid=1-s2.0-S2772508124000243-main.pdf},
+	doi = {10.1016/j.dche.2024.100162},
 	language = {en},
-	journal = {SSRN},
+	journal = {Digital Chemical Engineering},
 	author = {Spina, Deris Eduardo and de Oliveira Campos, Luiz Felipe and de Arruda, Wallthynay F. and Melo, Afrânio and Alves, Marcelo de S. and Rabello, Gildeir Lima and Anzai, Thiago K. and Pinto, José Carlos},
-	month = mar, 
+	month = may, 
 	year = {2024},
 }
 
