--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,16 @@
+@article{melo_bibmon_2024,
+	abbr = {DCE},
+	title = {BibMon: An open source Python package for process monitoring, soft sensing, and fault diagnosis},
+	html = {https://www.sciencedirect.com/science/article/pii/S2772508124000449},
+	pdf = {https://www.sciencedirect.com/science/article/pii/S2772508124000449/pdfft?md5=2bad12662f6927eb2b46d33e008996a7&pid=1-s2.0-S2772508124000449-main.pdf},
+	doi = {10.1016/j.dche.2024.100182},
+	language = {en},
+	journal = {Digital Chemical Engineering},
+	author = {Melo, Afrânio and Lemos, Tiago and Soares, Rafael and Spina, Deris Eduardo and Clavijo, Nayher and de Oliveira Campos, Luiz Felipe and Câmara, Maurício Melo and Feital, Thiago and Anzai, Thiago K. and Thompson, Pedro H. and Diehl, Fábio and Pinto, José Carlos},
+	month = sep, 
+	year = {2024},
+}
+
 @article{spina_comparison_2024,
 	abbr = {DCE},
 	title = {Comparison of Autoencoder Architectures for Fault Detection in Industrial Processes},
