--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,14 @@
+@inproceedings{melo_impact_2024,
+  abbr = {FATC},
+  title = {Impact of Fluid Properties on Flow Assurance Events in Offshore Oil Production: A Data-Driven Study},
+  author = {Melo, Afrânio and Khalil, Márcia and Leite, Rogério},
+  booktitle = {Proceedings of the SPE Flow Assurance Technology Congress},
+  year = {2024},
+  month = nov,
+  language = {en},
+  pdf = {https://spebrazilfatc.com.br/wp-content/uploads/2024/12/088-Impact-of-Fluid-Properties-on-Flow-Assurance-Events-in-Offshore-Oil-Production.pdf}
+}
+
 @article{melo_bibmon_2024,
 	abbr = {DCE},
 	title = {BibMon: An open source Python package for process monitoring, soft sensing, and fault diagnosis},
@@ -7,7 +18,7 @@
 	language = {en},
 	journal = {Digital Chemical Engineering},
 	author = {Melo, Afrânio and Lemos, Tiago and Soares, Rafael and Spina, Deris Eduardo and Clavijo, Nayher and de Oliveira Campos, Luiz Felipe and Câmara, Maurício Melo and Feital, Thiago and Anzai, Thiago K. and Thompson, Pedro H. and Diehl, Fábio and Pinto, José Carlos},
-	month = sep, 
+	month = dec, 
 	year = {2024},
 }
 
@@ -20,7 +31,7 @@
 	language = {en},
 	journal = {Digital Chemical Engineering},
 	author = {Spina, Deris Eduardo and de Oliveira Campos, Luiz Felipe and de Arruda, Wallthynay F. and Melo, Afrânio and Alves, Marcelo de S. and Rabello, Gildeir Lima and Anzai, Thiago K. and Pinto, José Carlos},
-	month = may, 
+	month = sep, 
 	year = {2024},
 }
 
@@ -59,7 +70,7 @@
 	language = {en},
 	journal = {Industrial \& Engineering Chemistry Research},
 	author = {Melo, Afrânio and Fadel, Fernando F. and Câmara, Maurício M. and Pinto, José Carlos},
-	month = aug,
+	month = sep,
 	year = {2023},
 }
 
@@ -99,7 +110,7 @@
 	doi = {10.1016/j.compchemeng.2021.107512},
 	journal = {Computers \& Chemical Engineering},
 	author = {Lemos, Tiago and Campos, Luiz Felipe and Melo, Afrânio and Clavijo, Nayher and Soares, Rafael and Câmara, Maurício and Feital, Thiago and Anzai, Thiago and Pinto, José Carlos},
-	month = dec,
+	month = aug,
 	year = {2021},
 	keywords = {fault detection, soft sensor, echo state network, monitoring, oil and gas processing},
 }
