--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,29 @@
+@misc{vargas20253wdataset200realistic,
+      title={3W Dataset 2.0.0: a realistic and public dataset with rare undesirable real events in oil wells}, 
+      author={Ricardo Emanuel Vaz Vargas and Afrânio José de Melo Junior and Celso José Munaro and Cláudio Benevenuto de Campos Lima and Eduardo Toledo de Lima Junior and Felipe Muntzberg Barrocas and Flávio Miguel Varejão and Guilherme Fidelis Peixer and Igor de Melo Nery Oliveira and Jader Riso Barbosa Jr. and Jaime Andrés Lozano Cadena and Jean Carlos Dias de Araújo and João Neuenschwander Escosteguy Carneiro and Lucas Gouveia Omena Lopes and Lucas Pereira de Gouveia and Mateus de Araujo Fernandes and Matheus Lima Scramignon and Patrick Marques Ciarelli and Rodrigo Castello Branco and Rogério Leite Alves Pinto},
+      year={2025},
+      eprint={2507.01048},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2507.01048}, 
+	  pdf = {https://arxiv.org/pdf/2507.01048},
+	  month = jun, 
+	  abbr = {arXiv},
+}
+
+@inproceedings{resende_digital_2025,
+  abbr       = {OTC},
+  title      = {Digital Twin Innovations in Artificial Lift and Flow Assurance: Overcoming Brazilian Offshore Challenges},
+  author     = {Resende, R. P. and Araujo, J. C. and Lins Ribeiro, J. and Melo, A. and Perovano, T. G. and Del Puppo, A. and Ciambelli, J. and Miyatake, L. K. and Postal, A. and Mendes, R. and Curto, H. and Dalla, L.},
+  booktitle  = {Proceedings of the Offshore Technology Conference},
+  year       = {2025},
+  month      = may,
+  language   = {en},
+  address    = {Houston, TX, USA},
+  doi        = {10.4043/35657-MS},
+  pdf        = {https://onepetro.org/OTCONF/proceedings-pdf/25OTC/25OTC/D041S050R001/4788786/otc-35657-ms.pdf},
+}
+
 @article{melo_bibmon_2024,
 	abbr = {DCE},
 	title = {BibMon: An open source Python package for process monitoring, soft sensing, and fault diagnosis},
