--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
       primaryClass={cs.LG},
       url={https://arxiv.org/abs/2507.01048}, 
 	  pdf = {https://arxiv.org/pdf/2507.01048},
+	  html = {https://arxiv.org/html/2507.01048v1},
 	  month = jun, 
 	  abbr = {arXiv},
 }
